language_tests/source_files/valid/closure_move.tr
func consume_list(_ list: List[int32]) {
    // Consumes list by value.
}

func main() {
    var list = List[int32]()
    list.append(1)

    let consume = || { consume_list(list) }
    consume()

    std.print("closure_move: PASSED\n")
}
