language_tests/source_files/invalid/closure_call_twice.tr
// Test: Closure Call Twice (FnOnce)
// This file should fail to compile because a FnOnce closure is moved on first call.

func consume_list(_ list: List[int32]) {
    // Consumes list by value.
}

func main() {
    var list = List[int32]()
    list.append(1)

    let consume = || { consume_list(list) }
    consume()
    consume() // ERROR: use of moved value 'consume'
}
